--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server:dev": "nodemon server.js"
+    "server:dev": "nodemon server.js",
+    "seeds": "mongo < db/seeds.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "mongodb": "^3.5.7"
   },
   "devDependencies": {
     "cors": "^2.8.5",
